# Toolkit-backup

./: .gitignore  .replit  autostart.sh  build-all.sh  cf_ip_expand.py  ecosystem.config.cjs  keepalive.sh  main.py  ms_device_auth.py  package.json  pnpm-lock.yaml  pyproject.toml  rebuild.sh  remote-exec.js  replit.md  replit.nix  setup-codespace.sh  setup-env.sh  start.sh  test_outlook_mail.py  xray-update-ip.js  xray-update-ip.sh  xray-watchdog.sh  xray.json  xray.json.bak  xray_update.py  使用说明.txt  技术栈说明.txt  更新日志.txt  注意事项.txt
.agents/: agent_assets_metadata.toml
.devcontainer/: devcontainer.json
artifacts/ai-toolkit/: index.html  vite.config.ts
artifacts/ai-toolkit/.replit-artifact/: artifact.toml
artifacts/ai-toolkit/src/: App.tsx  index.css
artifacts/ai-toolkit/src/components/: SearchBar.tsx  StatsBar.tsx  ToolCard.tsx  ToolDetail.tsx
artifacts/ai-toolkit/src/data/: tools.ts
artifacts/api-server/: batch_device_auth.py  captcha_lab.py  captcha_solver.py  cf_pool_api.py  cursor_register.py  cursor_register_http.py  outlook_graph.py  outlook_imap.py  outlook_register.py  outlook_register.py.bak  outlook_retoken.py  package.json  proxy_pool.py  proxy_pool.py.bak
artifacts/api-server/src/: app.ts  index.ts
artifacts/openai-pool/: start.py
artifacts/openai-pool/openai_pool_orchestrator/: mail_providers.py  register.py  server.py
artifacts/team-all-in-one/: config.json  config_loader.py  proxies.txt  start.py
attached_assets/: Pasted-socks5-pool-us-quarkip-io-7777-PvN1fHeJtl-country-US-se_1775923543971.txt
(+14 files in other folders)
