[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "curl-cffi>=0.15.0",
    "fastapi>=0.135.3",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "requests>=2.33.1",
    "uvicorn[standard]>=0.44.0",
]
